[DText] Prevent content from overflowing

--- a/app/javascript/src/styles/common/dtext.scss
+++ b/app/javascript/src/styles/common/dtext.scss
@@ -1,6 +1,10 @@
+.styled-dtext  {
+  display: grid;
+}
 
-
-.styled-dtext {
+.dtext-content {
+  overflow: auto;
+  display: inline;
   line-height: 1.4em;
 
   h1, h2, h3 {
