--- a/app/javascript/src/styles/common/spoiler.scss
+++ b/app/javascript/src/styles/common/spoiler.scss
@@ -1,4 +1,4 @@
-.styled-dtext .spoiler {
+.dtext-content .spoiler {
   color: $spoiler-color;
   background: $spoiler-background;
 
